# planet_wars

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: backend.yml  deploy.yml  frontend.yml
backend/: Dockerfile  ci_setup.py  main.py  pyproject.toml
backend/tests/: test_main.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
